// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AlertForm snapshot tests renders correctly on default values 1`] = `null`;

exports[`AlertForm snapshot tests renders correctly on delete allowed 1`] = `
<form
  className="ant-form ant-form-horizontal alert-form"
  onSubmit={[Function]}
>
  <button
    className="ant-btn alert-form__delete-btn ant-btn-circle"
    onClick={[Function]}
    type="button"
  >
    <i
      aria-label="icon: delete"
      className="anticon anticon-delete"
    >
      <svg
        aria-hidden="true"
        className=""
        data-icon="delete"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M360 184h-8c4.4 0 8-3.6 8-8v8h304v-8c0 4.4 3.6 8 8 8h-8v72h72v-80c0-35.3-28.7-64-64-64H352c-35.3 0-64 28.7-64 64v80h72v-72zm504 72H160c-17.7 0-32 14.3-32 32v32c0 4.4 3.6 8 8 8h60.4l24.7 523c1.6 34.1 29.8 61 63.9 61h454c34.2 0 62.3-26.8 63.9-61l24.7-523H888c4.4 0 8-3.6 8-8v-32c0-17.7-14.3-32-32-32zM731.3 840H292.7l-24.2-512h487l-24.2 512z"
        />
      </svg>
    </i>
  </button>
  <button
    className="ant-btn alert-form__go-back-btn"
    onClick={[Function]}
    type="button"
  >
    <i
      aria-label="icon: left"
      className="anticon anticon-left"
    >
      <svg
        aria-hidden="true"
        className=""
        data-icon="left"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 0 0 0 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
        />
      </svg>
    </i>
  </button>
  <div
    className="ant-row ant-form-item alert-form__item"
    style={Object {}}
  >
    <div
      className="ant-col ant-form-item-label"
      style={Object {}}
    >
      <label
        className=""
        htmlFor={null}
        onClick={[Function]}
        title="emailLabel"
      >
        emailLabel
      </label>
    </div>
    <div
      className="ant-col ant-form-item-control-wrapper"
      style={Object {}}
    >
      <div
        className="ant-form-item-control"
      >
        <span
          className="ant-form-item-children"
        >
          <span
            className="ant-input-affix-wrapper ant-input-affix-wrapper-lg"
          >
            <input
              className="ant-input ant-input-lg"
              onChange={[Function]}
              onKeyDown={[Function]}
              placeholder="emailPlaceholder"
              style={null}
              type="text"
              value=""
            />
            <span
              className="ant-input-suffix"
            />
          </span>
        </span>
      </div>
    </div>
  </div>
  <div
    className="ant-row ant-form-item alert-form__item"
    style={Object {}}
  >
    <div
      className="ant-col ant-form-item-label"
      style={Object {}}
    >
      <label
        className=""
        htmlFor={null}
        onClick={[Function]}
        title="searchPhraseLabel"
      >
        searchPhraseLabel
      </label>
    </div>
    <div
      className="ant-col ant-form-item-control-wrapper"
      style={Object {}}
    >
      <div
        className="ant-form-item-control"
      >
        <span
          className="ant-form-item-children"
        >
          <span
            className="ant-input-affix-wrapper ant-input-affix-wrapper-lg"
          >
            <input
              className="ant-input ant-input-lg"
              onChange={[Function]}
              onKeyDown={[Function]}
              placeholder="searchPhrasePlaceholder"
              style={null}
              type="text"
              value=""
            />
            <span
              className="ant-input-suffix"
            />
          </span>
        </span>
      </div>
    </div>
  </div>
  <div
    className="ant-row ant-form-item alert-form__item"
    style={Object {}}
  >
    <div
      className="ant-col ant-form-item-label"
      style={Object {}}
    >
      <label
        className=""
        htmlFor={null}
        onClick={[Function]}
        title="frequencyLabel"
      >
        frequencyLabel
      </label>
    </div>
    <div
      className="ant-col ant-form-item-control-wrapper"
      style={Object {}}
    >
      <div
        className="ant-form-item-control"
      >
        <span
          className="ant-form-item-children"
        >
          <span>
            <span
              className="select-desktop"
            >
              <div
                className="ant-select-lg ant-select ant-select-enabled"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseDown={[Function]}
                onMouseOut={[Function]}
                onMouseUp={[Function]}
                onTouchStart={[Function]}
              >
                <div
                  aria-autocomplete="list"
                  aria-controls="test-uuid"
                  aria-expanded={false}
                  aria-haspopup="true"
                  className="ant-select-selection
            ant-select-selection--single"
                  onKeyDown={[Function]}
                  role="combobox"
                  tabIndex={0}
                >
                  <div
                    className="ant-select-selection__rendered"
                  >
                    <div
                      className="ant-select-selection__placeholder"
                      onClick={[Function]}
                      onMouseDown={[Function]}
                      style={
                        Object {
                          "WebkitUserSelect": "none",
                          "display": "none",
                          "userSelect": "none",
                        }
                      }
                      unselectable="on"
                    >
                      frequencyPlaceholder
                    </div>
                    <div
                      className="ant-select-selection-selected-value"
                      style={
                        Object {
                          "display": "block",
                          "opacity": 1,
                        }
                      }
                      title=""
                    />
                  </div>
                  <span
                    className="ant-select-arrow"
                    onClick={[Function]}
                    style={
                      Object {
                        "WebkitUserSelect": "none",
                        "userSelect": "none",
                      }
                    }
                    unselectable="on"
                  >
                    <i
                      aria-label="icon: down"
                      className="anticon anticon-down ant-select-arrow-icon"
                    >
                      <svg
                        aria-hidden="true"
                        className=""
                        data-icon="down"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                        />
                      </svg>
                    </i>
                  </span>
                </div>
              </div>
            </span>
            <span
              className="select-mobile"
            >
              <input
                className="ant-input ant-input-lg select-mobile__field"
                disabled={false}
                onChange={[Function]}
                onClick={[Function]}
                onKeyDown={[Function]}
                placeholder="frequencyPlaceholder"
                type="text"
                value=""
              />
              <div
                className="select-mobile__list fullscreen-modal "
              >
                <div
                  className="select-mobile__list__navbar"
                >
                  <p>
                    frequencyMobileLabel
                  </p>
                  <button
                    className="ant-btn select-mobile__list__navbar__close-btn ant-btn-circle ant-btn-icon-only"
                    onClick={[Function]}
                    type="button"
                  >
                    <i
                      aria-label="icon: close"
                      className="anticon anticon-close"
                    >
                      <svg
                        aria-hidden="true"
                        className=""
                        data-icon="close"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 0 0 203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
                        />
                      </svg>
                    </i>
                  </button>
                </div>
                <div
                  className="select-mobile__list__item "
                  onClick={[Function]}
                >
                  2
                </div>
                <div
                  className="select-mobile__list__item "
                  onClick={[Function]}
                >
                  10
                </div>
                <div
                  className="select-mobile__list__item "
                  onClick={[Function]}
                >
                  30
                </div>
              </div>
            </span>
          </span>
        </span>
      </div>
    </div>
  </div>
  <div
    className="alert-form__btn-area"
  >
    <button
      className="ant-btn alert-form__submit-btn"
      onClick={[Function]}
      type="submit"
    >
      <span>
        submitButton
      </span>
    </button>
    <button
      className="ant-btn alert-form__clear-btn"
      onClick={[Function]}
      type="button"
    >
      <span>
        clearButton
      </span>
    </button>
  </div>
</form>
`;

exports[`AlertForm snapshot tests renders correctly on loading 1`] = `
<form
  className="ant-form ant-form-horizontal alert-form"
  onSubmit={[Function]}
>
  <button
    className="ant-btn alert-form__go-back-btn"
    disabled={true}
    onClick={[Function]}
    type="button"
  >
    <i
      aria-label="icon: left"
      className="anticon anticon-left"
    >
      <svg
        aria-hidden="true"
        className=""
        data-icon="left"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 0 0 0 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
        />
      </svg>
    </i>
  </button>
  <div
    className="ant-row ant-form-item alert-form__item"
    style={Object {}}
  >
    <div
      className="ant-col ant-form-item-label"
      style={Object {}}
    >
      <label
        className=""
        htmlFor={null}
        onClick={[Function]}
        title="emailLabel"
      >
        emailLabel
      </label>
    </div>
    <div
      className="ant-col ant-form-item-control-wrapper"
      style={Object {}}
    >
      <div
        className="ant-form-item-control"
      >
        <span
          className="ant-form-item-children"
        >
          <span
            className="ant-input-affix-wrapper ant-input-affix-wrapper-lg"
          >
            <input
              className="ant-input ant-input-lg ant-input-disabled"
              disabled={true}
              onChange={[Function]}
              onKeyDown={[Function]}
              placeholder="emailPlaceholder"
              style={null}
              type="text"
              value=""
            />
            <span
              className="ant-input-suffix"
            />
          </span>
        </span>
      </div>
    </div>
  </div>
  <div
    className="ant-row ant-form-item alert-form__item"
    style={Object {}}
  >
    <div
      className="ant-col ant-form-item-label"
      style={Object {}}
    >
      <label
        className=""
        htmlFor={null}
        onClick={[Function]}
        title="searchPhraseLabel"
      >
        searchPhraseLabel
      </label>
    </div>
    <div
      className="ant-col ant-form-item-control-wrapper"
      style={Object {}}
    >
      <div
        className="ant-form-item-control"
      >
        <span
          className="ant-form-item-children"
        >
          <span
            className="ant-input-affix-wrapper ant-input-affix-wrapper-lg"
          >
            <input
              className="ant-input ant-input-lg ant-input-disabled"
              disabled={true}
              onChange={[Function]}
              onKeyDown={[Function]}
              placeholder="searchPhrasePlaceholder"
              style={null}
              type="text"
              value=""
            />
            <span
              className="ant-input-suffix"
            />
          </span>
        </span>
      </div>
    </div>
  </div>
  <div
    className="ant-row ant-form-item alert-form__item"
    style={Object {}}
  >
    <div
      className="ant-col ant-form-item-label"
      style={Object {}}
    >
      <label
        className=""
        htmlFor={null}
        onClick={[Function]}
        title="frequencyLabel"
      >
        frequencyLabel
      </label>
    </div>
    <div
      className="ant-col ant-form-item-control-wrapper"
      style={Object {}}
    >
      <div
        className="ant-form-item-control"
      >
        <span
          className="ant-form-item-children"
        >
          <span>
            <span
              className="select-desktop"
            >
              <div
                className="ant-select-lg ant-select ant-select-disabled"
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseDown={[Function]}
                onMouseOut={[Function]}
                onMouseUp={[Function]}
              >
                <div
                  aria-autocomplete="list"
                  aria-controls="test-uuid"
                  aria-expanded={false}
                  aria-haspopup="true"
                  className="ant-select-selection
            ant-select-selection--single"
                  onKeyDown={[Function]}
                  role="combobox"
                  tabIndex={-1}
                >
                  <div
                    className="ant-select-selection__rendered"
                  >
                    <div
                      className="ant-select-selection__placeholder"
                      onClick={[Function]}
                      onMouseDown={[Function]}
                      style={
                        Object {
                          "WebkitUserSelect": "none",
                          "display": "none",
                          "userSelect": "none",
                        }
                      }
                      unselectable="on"
                    >
                      frequencyPlaceholder
                    </div>
                    <div
                      className="ant-select-selection-selected-value"
                      style={
                        Object {
                          "display": "block",
                          "opacity": 1,
                        }
                      }
                      title=""
                    />
                  </div>
                  <span
                    className="ant-select-arrow"
                    onClick={[Function]}
                    style={
                      Object {
                        "WebkitUserSelect": "none",
                        "userSelect": "none",
                      }
                    }
                    unselectable="on"
                  >
                    <i
                      aria-label="icon: down"
                      className="anticon anticon-down ant-select-arrow-icon"
                    >
                      <svg
                        aria-hidden="true"
                        className=""
                        data-icon="down"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                        />
                      </svg>
                    </i>
                  </span>
                </div>
              </div>
            </span>
            <span
              className="select-mobile"
            >
              <input
                className="ant-input ant-input-lg ant-input-disabled select-mobile__field"
                disabled={true}
                onChange={[Function]}
                onClick={[Function]}
                onKeyDown={[Function]}
                placeholder="frequencyPlaceholder"
                type="text"
                value=""
              />
              <div
                className="select-mobile__list fullscreen-modal "
              >
                <div
                  className="select-mobile__list__navbar"
                >
                  <p>
                    frequencyMobileLabel
                  </p>
                  <button
                    className="ant-btn select-mobile__list__navbar__close-btn ant-btn-circle ant-btn-icon-only"
                    onClick={[Function]}
                    type="button"
                  >
                    <i
                      aria-label="icon: close"
                      className="anticon anticon-close"
                    >
                      <svg
                        aria-hidden="true"
                        className=""
                        data-icon="close"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 0 0 203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
                        />
                      </svg>
                    </i>
                  </button>
                </div>
                <div
                  className="select-mobile__list__item "
                  onClick={[Function]}
                >
                  2
                </div>
                <div
                  className="select-mobile__list__item "
                  onClick={[Function]}
                >
                  10
                </div>
                <div
                  className="select-mobile__list__item "
                  onClick={[Function]}
                >
                  30
                </div>
              </div>
            </span>
          </span>
        </span>
      </div>
    </div>
  </div>
  <div
    className="alert-form__btn-area"
  >
    <button
      className="ant-btn alert-form__submit-btn"
      disabled={true}
      onClick={[Function]}
      type="submit"
    >
      <span>
        submitButton
      </span>
    </button>
    <button
      className="ant-btn alert-form__clear-btn"
      disabled={true}
      onClick={[Function]}
      type="button"
    >
      <span>
        clearButton
      </span>
    </button>
  </div>
</form>
`;

exports[`AlertForm snapshot tests renders correctly on submit loading 1`] = `
<form
  className="ant-form ant-form-horizontal alert-form"
  onSubmit={[Function]}
>
  <button
    className="ant-btn alert-form__go-back-btn"
    disabled={true}
    onClick={[Function]}
    type="button"
  >
    <i
      aria-label="icon: left"
      className="anticon anticon-left"
    >
      <svg
        aria-hidden="true"
        className=""
        data-icon="left"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 0 0 0 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
        />
      </svg>
    </i>
  </button>
  <div
    className="ant-row ant-form-item alert-form__item"
    style={Object {}}
  >
    <div
      className="ant-col ant-form-item-label"
      style={Object {}}
    >
      <label
        className=""
        htmlFor={null}
        onClick={[Function]}
        title="emailLabel"
      >
        emailLabel
      </label>
    </div>
    <div
      className="ant-col ant-form-item-control-wrapper"
      style={Object {}}
    >
      <div
        className="ant-form-item-control"
      >
        <span
          className="ant-form-item-children"
        >
          <span
            className="ant-input-affix-wrapper ant-input-affix-wrapper-lg"
          >
            <input
              className="ant-input ant-input-lg ant-input-disabled"
              disabled={true}
              onChange={[Function]}
              onKeyDown={[Function]}
              placeholder="emailPlaceholder"
              style={null}
              type="text"
              value=""
            />
            <span
              className="ant-input-suffix"
            />
          </span>
        </span>
      </div>
    </div>
  </div>
  <div
    className="ant-row ant-form-item alert-form__item"
    style={Object {}}
  >
    <div
      className="ant-col ant-form-item-label"
      style={Object {}}
    >
      <label
        className=""
        htmlFor={null}
        onClick={[Function]}
        title="searchPhraseLabel"
      >
        searchPhraseLabel
      </label>
    </div>
    <div
      className="ant-col ant-form-item-control-wrapper"
      style={Object {}}
    >
      <div
        className="ant-form-item-control"
      >
        <span
          className="ant-form-item-children"
        >
          <span
            className="ant-input-affix-wrapper ant-input-affix-wrapper-lg"
          >
            <input
              className="ant-input ant-input-lg ant-input-disabled"
              disabled={true}
              onChange={[Function]}
              onKeyDown={[Function]}
              placeholder="searchPhrasePlaceholder"
              style={null}
              type="text"
              value=""
            />
            <span
              className="ant-input-suffix"
            />
          </span>
        </span>
      </div>
    </div>
  </div>
  <div
    className="ant-row ant-form-item alert-form__item"
    style={Object {}}
  >
    <div
      className="ant-col ant-form-item-label"
      style={Object {}}
    >
      <label
        className=""
        htmlFor={null}
        onClick={[Function]}
        title="frequencyLabel"
      >
        frequencyLabel
      </label>
    </div>
    <div
      className="ant-col ant-form-item-control-wrapper"
      style={Object {}}
    >
      <div
        className="ant-form-item-control"
      >
        <span
          className="ant-form-item-children"
        >
          <span>
            <span
              className="select-desktop"
            >
              <div
                className="ant-select-lg ant-select ant-select-disabled"
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseDown={[Function]}
                onMouseOut={[Function]}
                onMouseUp={[Function]}
              >
                <div
                  aria-autocomplete="list"
                  aria-controls="test-uuid"
                  aria-expanded={false}
                  aria-haspopup="true"
                  className="ant-select-selection
            ant-select-selection--single"
                  onKeyDown={[Function]}
                  role="combobox"
                  tabIndex={-1}
                >
                  <div
                    className="ant-select-selection__rendered"
                  >
                    <div
                      className="ant-select-selection__placeholder"
                      onClick={[Function]}
                      onMouseDown={[Function]}
                      style={
                        Object {
                          "WebkitUserSelect": "none",
                          "display": "none",
                          "userSelect": "none",
                        }
                      }
                      unselectable="on"
                    >
                      frequencyPlaceholder
                    </div>
                    <div
                      className="ant-select-selection-selected-value"
                      style={
                        Object {
                          "display": "block",
                          "opacity": 1,
                        }
                      }
                      title=""
                    />
                  </div>
                  <span
                    className="ant-select-arrow"
                    onClick={[Function]}
                    style={
                      Object {
                        "WebkitUserSelect": "none",
                        "userSelect": "none",
                      }
                    }
                    unselectable="on"
                  >
                    <i
                      aria-label="icon: down"
                      className="anticon anticon-down ant-select-arrow-icon"
                    >
                      <svg
                        aria-hidden="true"
                        className=""
                        data-icon="down"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                        />
                      </svg>
                    </i>
                  </span>
                </div>
              </div>
            </span>
            <span
              className="select-mobile"
            >
              <input
                className="ant-input ant-input-lg ant-input-disabled select-mobile__field"
                disabled={true}
                onChange={[Function]}
                onClick={[Function]}
                onKeyDown={[Function]}
                placeholder="frequencyPlaceholder"
                type="text"
                value=""
              />
              <div
                className="select-mobile__list fullscreen-modal "
              >
                <div
                  className="select-mobile__list__navbar"
                >
                  <p>
                    frequencyMobileLabel
                  </p>
                  <button
                    className="ant-btn select-mobile__list__navbar__close-btn ant-btn-circle ant-btn-icon-only"
                    onClick={[Function]}
                    type="button"
                  >
                    <i
                      aria-label="icon: close"
                      className="anticon anticon-close"
                    >
                      <svg
                        aria-hidden="true"
                        className=""
                        data-icon="close"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 0 0 203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
                        />
                      </svg>
                    </i>
                  </button>
                </div>
                <div
                  className="select-mobile__list__item "
                  onClick={[Function]}
                >
                  2
                </div>
                <div
                  className="select-mobile__list__item "
                  onClick={[Function]}
                >
                  10
                </div>
                <div
                  className="select-mobile__list__item "
                  onClick={[Function]}
                >
                  30
                </div>
              </div>
            </span>
          </span>
        </span>
      </div>
    </div>
  </div>
  <div
    className="alert-form__btn-area"
  >
    <button
      className="ant-btn alert-form__submit-btn ant-btn-loading"
      disabled={true}
      onClick={[Function]}
      type="submit"
    >
      <i
        aria-label="icon: loading"
        className="anticon anticon-loading"
      >
        <svg
          aria-hidden="true"
          className="anticon-spin"
          data-icon="loading"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="0 0 1024 1024"
          width="1em"
        >
          <path
            d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 0 0-94.3-139.9 437.71 437.71 0 0 0-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
          />
        </svg>
      </i>
      <span>
        submitButton
      </span>
    </button>
    <button
      className="ant-btn alert-form__clear-btn"
      disabled={true}
      onClick={[Function]}
      type="button"
    >
      <span>
        clearButton
      </span>
    </button>
  </div>
</form>
`;

exports[`AlertForm snapshot tests renders correctly with frequencies 1`] = `
<form
  className="ant-form ant-form-horizontal alert-form"
  onSubmit={[Function]}
>
  <button
    className="ant-btn alert-form__go-back-btn"
    onClick={[Function]}
    type="button"
  >
    <i
      aria-label="icon: left"
      className="anticon anticon-left"
    >
      <svg
        aria-hidden="true"
        className=""
        data-icon="left"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 0 0 0 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
        />
      </svg>
    </i>
  </button>
  <div
    className="ant-row ant-form-item alert-form__item"
    style={Object {}}
  >
    <div
      className="ant-col ant-form-item-label"
      style={Object {}}
    >
      <label
        className=""
        htmlFor={null}
        onClick={[Function]}
        title="emailLabel"
      >
        emailLabel
      </label>
    </div>
    <div
      className="ant-col ant-form-item-control-wrapper"
      style={Object {}}
    >
      <div
        className="ant-form-item-control"
      >
        <span
          className="ant-form-item-children"
        >
          <span
            className="ant-input-affix-wrapper ant-input-affix-wrapper-lg"
          >
            <input
              className="ant-input ant-input-lg"
              onChange={[Function]}
              onKeyDown={[Function]}
              placeholder="emailPlaceholder"
              style={null}
              type="text"
              value=""
            />
            <span
              className="ant-input-suffix"
            />
          </span>
        </span>
      </div>
    </div>
  </div>
  <div
    className="ant-row ant-form-item alert-form__item"
    style={Object {}}
  >
    <div
      className="ant-col ant-form-item-label"
      style={Object {}}
    >
      <label
        className=""
        htmlFor={null}
        onClick={[Function]}
        title="searchPhraseLabel"
      >
        searchPhraseLabel
      </label>
    </div>
    <div
      className="ant-col ant-form-item-control-wrapper"
      style={Object {}}
    >
      <div
        className="ant-form-item-control"
      >
        <span
          className="ant-form-item-children"
        >
          <span
            className="ant-input-affix-wrapper ant-input-affix-wrapper-lg"
          >
            <input
              className="ant-input ant-input-lg"
              onChange={[Function]}
              onKeyDown={[Function]}
              placeholder="searchPhrasePlaceholder"
              style={null}
              type="text"
              value=""
            />
            <span
              className="ant-input-suffix"
            />
          </span>
        </span>
      </div>
    </div>
  </div>
  <div
    className="ant-row ant-form-item alert-form__item"
    style={Object {}}
  >
    <div
      className="ant-col ant-form-item-label"
      style={Object {}}
    >
      <label
        className=""
        htmlFor={null}
        onClick={[Function]}
        title="frequencyLabel"
      >
        frequencyLabel
      </label>
    </div>
    <div
      className="ant-col ant-form-item-control-wrapper"
      style={Object {}}
    >
      <div
        className="ant-form-item-control"
      >
        <span
          className="ant-form-item-children"
        >
          <span>
            <span
              className="select-desktop"
            >
              <div
                className="ant-select-lg ant-select ant-select-enabled"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseDown={[Function]}
                onMouseOut={[Function]}
                onMouseUp={[Function]}
                onTouchStart={[Function]}
              >
                <div
                  aria-autocomplete="list"
                  aria-controls="test-uuid"
                  aria-expanded={false}
                  aria-haspopup="true"
                  className="ant-select-selection
            ant-select-selection--single"
                  onKeyDown={[Function]}
                  role="combobox"
                  tabIndex={0}
                >
                  <div
                    className="ant-select-selection__rendered"
                  >
                    <div
                      className="ant-select-selection__placeholder"
                      onClick={[Function]}
                      onMouseDown={[Function]}
                      style={
                        Object {
                          "WebkitUserSelect": "none",
                          "display": "none",
                          "userSelect": "none",
                        }
                      }
                      unselectable="on"
                    >
                      frequencyPlaceholder
                    </div>
                    <div
                      className="ant-select-selection-selected-value"
                      style={
                        Object {
                          "display": "block",
                          "opacity": 1,
                        }
                      }
                      title=""
                    />
                  </div>
                  <span
                    className="ant-select-arrow"
                    onClick={[Function]}
                    style={
                      Object {
                        "WebkitUserSelect": "none",
                        "userSelect": "none",
                      }
                    }
                    unselectable="on"
                  >
                    <i
                      aria-label="icon: down"
                      className="anticon anticon-down ant-select-arrow-icon"
                    >
                      <svg
                        aria-hidden="true"
                        className=""
                        data-icon="down"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                        />
                      </svg>
                    </i>
                  </span>
                </div>
              </div>
            </span>
            <span
              className="select-mobile"
            >
              <input
                className="ant-input ant-input-lg select-mobile__field"
                disabled={false}
                onChange={[Function]}
                onClick={[Function]}
                onKeyDown={[Function]}
                placeholder="frequencyPlaceholder"
                type="text"
                value=""
              />
              <div
                className="select-mobile__list fullscreen-modal "
              >
                <div
                  className="select-mobile__list__navbar"
                >
                  <p>
                    frequencyMobileLabel
                  </p>
                  <button
                    className="ant-btn select-mobile__list__navbar__close-btn ant-btn-circle ant-btn-icon-only"
                    onClick={[Function]}
                    type="button"
                  >
                    <i
                      aria-label="icon: close"
                      className="anticon anticon-close"
                    >
                      <svg
                        aria-hidden="true"
                        className=""
                        data-icon="close"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 0 0 203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
                        />
                      </svg>
                    </i>
                  </button>
                </div>
                <div
                  className="select-mobile__list__item "
                  onClick={[Function]}
                >
                  2
                </div>
                <div
                  className="select-mobile__list__item "
                  onClick={[Function]}
                >
                  10
                </div>
                <div
                  className="select-mobile__list__item "
                  onClick={[Function]}
                >
                  30
                </div>
              </div>
            </span>
          </span>
        </span>
      </div>
    </div>
  </div>
  <div
    className="alert-form__btn-area"
  >
    <button
      className="ant-btn alert-form__submit-btn"
      onClick={[Function]}
      type="submit"
    >
      <span>
        submitButton
      </span>
    </button>
    <button
      className="ant-btn alert-form__clear-btn"
      onClick={[Function]}
      type="button"
    >
      <span>
        clearButton
      </span>
    </button>
  </div>
</form>
`;

exports[`AlertForm snapshot tests renders correctly with params 1`] = `
<form
  className="ant-form ant-form-horizontal alert-form"
  onSubmit={[Function]}
>
  <button
    className="ant-btn alert-form__go-back-btn"
    onClick={[Function]}
    type="button"
  >
    <i
      aria-label="icon: left"
      className="anticon anticon-left"
    >
      <svg
        aria-hidden="true"
        className=""
        data-icon="left"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 0 0 0 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
        />
      </svg>
    </i>
  </button>
  <div
    className="ant-row ant-form-item alert-form__item"
    style={Object {}}
  >
    <div
      className="ant-col ant-form-item-label"
      style={Object {}}
    >
      <label
        className=""
        htmlFor={null}
        onClick={[Function]}
        title="emailLabel"
      >
        emailLabel
      </label>
    </div>
    <div
      className="ant-col ant-form-item-control-wrapper"
      style={Object {}}
    >
      <div
        className="ant-form-item-control"
      >
        <span
          className="ant-form-item-children"
        >
          <span
            className="ant-input-affix-wrapper ant-input-affix-wrapper-lg"
          >
            <input
              className="ant-input ant-input-lg"
              onChange={[Function]}
              onKeyDown={[Function]}
              placeholder="emailPlaceholder"
              style={null}
              type="text"
              value=""
            />
            <span
              className="ant-input-suffix"
            />
          </span>
        </span>
      </div>
    </div>
  </div>
  <div
    className="ant-row ant-form-item alert-form__item"
    style={Object {}}
  >
    <div
      className="ant-col ant-form-item-label"
      style={Object {}}
    >
      <label
        className=""
        htmlFor={null}
        onClick={[Function]}
        title="searchPhraseLabel"
      >
        searchPhraseLabel
      </label>
    </div>
    <div
      className="ant-col ant-form-item-control-wrapper"
      style={Object {}}
    >
      <div
        className="ant-form-item-control"
      >
        <span
          className="ant-form-item-children"
        >
          <span
            className="ant-input-affix-wrapper ant-input-affix-wrapper-lg"
          >
            <input
              className="ant-input ant-input-lg"
              onChange={[Function]}
              onKeyDown={[Function]}
              placeholder="searchPhrasePlaceholder"
              style={null}
              type="text"
              value=""
            />
            <span
              className="ant-input-suffix"
            />
          </span>
        </span>
      </div>
    </div>
  </div>
  <div
    className="ant-row ant-form-item alert-form__item"
    style={Object {}}
  >
    <div
      className="ant-col ant-form-item-label"
      style={Object {}}
    >
      <label
        className=""
        htmlFor={null}
        onClick={[Function]}
        title="frequencyLabel"
      >
        frequencyLabel
      </label>
    </div>
    <div
      className="ant-col ant-form-item-control-wrapper"
      style={Object {}}
    >
      <div
        className="ant-form-item-control"
      >
        <span
          className="ant-form-item-children"
        >
          <span>
            <span
              className="select-desktop"
            >
              <div
                className="ant-select-lg ant-select ant-select-enabled"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseDown={[Function]}
                onMouseOut={[Function]}
                onMouseUp={[Function]}
                onTouchStart={[Function]}
              >
                <div
                  aria-autocomplete="list"
                  aria-controls="test-uuid"
                  aria-expanded={false}
                  aria-haspopup="true"
                  className="ant-select-selection
            ant-select-selection--single"
                  onKeyDown={[Function]}
                  role="combobox"
                  tabIndex={0}
                >
                  <div
                    className="ant-select-selection__rendered"
                  >
                    <div
                      className="ant-select-selection__placeholder"
                      onClick={[Function]}
                      onMouseDown={[Function]}
                      style={
                        Object {
                          "WebkitUserSelect": "none",
                          "display": "none",
                          "userSelect": "none",
                        }
                      }
                      unselectable="on"
                    >
                      frequencyPlaceholder
                    </div>
                    <div
                      className="ant-select-selection-selected-value"
                      style={
                        Object {
                          "display": "block",
                          "opacity": 1,
                        }
                      }
                      title=""
                    />
                  </div>
                  <span
                    className="ant-select-arrow"
                    onClick={[Function]}
                    style={
                      Object {
                        "WebkitUserSelect": "none",
                        "userSelect": "none",
                      }
                    }
                    unselectable="on"
                  >
                    <i
                      aria-label="icon: down"
                      className="anticon anticon-down ant-select-arrow-icon"
                    >
                      <svg
                        aria-hidden="true"
                        className=""
                        data-icon="down"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                        />
                      </svg>
                    </i>
                  </span>
                </div>
              </div>
            </span>
            <span
              className="select-mobile"
            >
              <input
                className="ant-input ant-input-lg select-mobile__field"
                disabled={false}
                onChange={[Function]}
                onClick={[Function]}
                onKeyDown={[Function]}
                placeholder="frequencyPlaceholder"
                type="text"
                value=""
              />
              <div
                className="select-mobile__list fullscreen-modal "
              >
                <div
                  className="select-mobile__list__navbar"
                >
                  <p>
                    frequencyMobileLabel
                  </p>
                  <button
                    className="ant-btn select-mobile__list__navbar__close-btn ant-btn-circle ant-btn-icon-only"
                    onClick={[Function]}
                    type="button"
                  >
                    <i
                      aria-label="icon: close"
                      className="anticon anticon-close"
                    >
                      <svg
                        aria-hidden="true"
                        className=""
                        data-icon="close"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 0 0 203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
                        />
                      </svg>
                    </i>
                  </button>
                </div>
                <div
                  className="ant-spin ant-spin-spinning loader"
                >
                  <span
                    className="ant-spin-dot ant-spin-dot-spin"
                  >
                    <i
                      className="ant-spin-dot-item"
                    />
                    <i
                      className="ant-spin-dot-item"
                    />
                    <i
                      className="ant-spin-dot-item"
                    />
                    <i
                      className="ant-spin-dot-item"
                    />
                  </span>
                </div>
              </div>
            </span>
          </span>
        </span>
      </div>
    </div>
  </div>
  <div
    className="alert-form__btn-area"
  >
    <button
      className="ant-btn alert-form__submit-btn"
      onClick={[Function]}
      type="submit"
    >
      <span>
        submitButton
      </span>
    </button>
    <button
      className="ant-btn alert-form__clear-btn"
      onClick={[Function]}
      type="button"
    >
      <span>
        clearButton
      </span>
    </button>
  </div>
</form>
`;
